--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body{
     font-family: 'Times New Roman', Times, serif;
     background: linear-gradient(123deg, aqua, #06cd27);
     color: black;
-    align:"center";
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,10 +14,10 @@ header{
     padding: 16px 32px;
     border-radius: 20px;
     box-shadow: 0 40px 20px rgba((0,0,0,0.1));
-    margin-bottom: 32px
+    margin-bottom: 32px;
     animation: fadenin 1s ease-out forwards;
-
 }
+
 h1{
     text-align: center;
     font-size: 50px;
@@ -44,15 +43,15 @@ p{
     font-size: 25px;
 }
 .card {
+.card {
     background: white;
     padding: 24px;
     border-radius: 15px;
     box-shadow: 0 4px 20px rgba(0,0,0,0.15);
-    transition: tranform 0.3s ease, box-shadow 0.3s;
+    transition: transform 0.3s ease, box-shadow 0.3s;
     width: 300px;
     margin: 1rem;
 }
-
 .card:hover{
             transform: scale(2);
             box-shadow: 0 10px 30px rgba(0,0,0,0.2);
@@ -66,13 +65,15 @@ p{
 }
 
 @keyframes fadenin {
-    from{ opacity: 0;transform: translateY(-20PX);}
-    To{opacity: 1; transform: translateY(0);}
+@keyframes fadenin {
+    from{ opacity: 0;transform: translateY(-20px);}
+    to{opacity: 1; transform: translateY(0);}
 }
 
-@media (max-width:600px)
+@media (max-width:600px) {
+@media (max-width:600px) {
     h1{
-        font-size= 32px;
+        font-size: 32px;
     }
 
     .card {
